fix: correct alignment property in cardContainer CSS

--- a/src/pages/homePage/HomeComponents/CardsContainer/CardsContainer.module.css
+++ b/src/pages/homePage/HomeComponents/CardsContainer/CardsContainer.module.css
@@ -3,7 +3,7 @@
 
   display: flex;
   flex-direction: row;
-  align-items: center;
+  align-items: top;
   justify-content: space-between;
   flex-wrap: wrap;
 }
